# python-project-50

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
gen_diff/: cli.py
gen_diff/diff/: gendiff.py  parser.py
gen_diff/scripts/: gen_diff.py  gen_diff_parser.py
gen_diff/storage/: file3.json  file4.json
